--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-"# SIIN" 
+_ReSharper.*
+bin
+obj
+build
+*.suo
+*resharper*
+*.user
+*.cache
+*.nupkg
+**/packages/*
+packages/*
+!packages/build/
+!**/packages/build/
+*.ncrunchproject
+~*.*
+*Web.config*
+*Web.Debug.config*
+*Web.Release.config*
+/SecondIINoneMC.Web/obj/*
+/SecondIINoneMC.Web/obj
+/SecondIINoneMC.Web/obj/Debug
+/SecondIINoneMC.Web/obj
